Contract Configurator 1.19.0
- Added Part.UnlockCost().
- Added Part.Resources().
- Added Part.ResourceCapacity().
- Fixed issues with part parser (thanks 5thHorseman).
- Fixed exception in Mission Control (thanks Conventia & AccidentalDisassembly).

Contract Configurator 1.18.1
- Fixed NRE on contract save (thanks CecilFF4).

Contract Configurator 1.18.0
- New Base and ISRU agent icons from Enceos.
- Added Resource.Density() method.
- Added partModule and partModuleType to TechResearchedRequirement.
- Fixed problem with requirement data for offered data not getting fixed until contract save (thanks severedsolo).
- Fixed sorting of contract groups (thanks pap1723).
- Fixed Resource parsing limitations (thanks hargn).
- Fixed issue with DATA nodes and child contract groups (thanks hargn).
- Disallow DMOS Seismic Impact Hammer at KSC in science subsystem (thanks BeafSalad).
- Remove short-circuit in Any/All requirement texts for players aren't given incorrect information (thanks inigma).
- Fixed an issue that prevented expressions from working in resource loading (thanks hargn).
- Cycle through new contracts to generate in a random order to prevent certain contracts from getting preference.
- Fixed issue where contract expiries were never getting set (thanks DarkonZ).
- Fixed issue with some parameters combined with the All parameter causing incorrect contract failure (thanks tomf).
- Fixed issue with selected contract in mission control getting unselected when a new contract is generated (thanks AccidentalDisassembly).

Contract Configurator 1.17.0
- Mission Control remembers the last visited tab when you open it, and takes you there.
- Added Tracking Station buttons for filtering orbits/waypoints from contracts.
- Added support for adding loading tool tips.
- Better support for Kolniya/Tundra orbits - will error if the orbit would exit the SOI.  Also added CelestialBody methods to determine if the body is allowed to have Kolniya/Tundra orbits.